--- a/stylesheets/scss/components/_normalize.scss
+++ b/stylesheets/scss/components/_normalize.scss
@@ -10,6 +10,10 @@ html, body {
 	background: $background;
 }
 
+label {
+	cursor: pointer;
+}
+
 body {
 	h1, h2, h3, h4, h5, h6 {
 		word-wrap: break-word;
