--- a/stylesheets/scss/components/_settings.scss
+++ b/stylesheets/scss/components/_settings.scss
@@ -31,7 +31,7 @@
 - Icons
 - Progress
 - Selection
-- Side navigation
+- Navigation drawer / sidebar
 - Sliders
 - Snackbars & Toasts
 - Tables
@@ -44,7 +44,7 @@
  * Colors
  **************************************/
 /*
- * Add / remove colors you would like to use
+ * Add / remove colors you would like to use in CSS
  * NOTE In SCSS all color variables stay accessible
  *
  * All colors below
