--- a/stylesheets/scss/components/_tabs.scss
+++ b/stylesheets/scss/components/_tabs.scss
@@ -65,7 +65,7 @@
 
 		.material-icons {
 			width: remCalc(24px);
-			hieght: remCalc(24px);
+			height: remCalc(24px);
 		}
 
 		&:hover, &.sc-active {
